# DECIMER-Image_Transformer

./: .gitattributes  .gitignore  .pre-commit-config.yaml  .readthedocs.yml  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  ISSUES.md  LICENSE  MANIFEST.in  Predicted_SMILES.txt  Python_Requirements.txt  README.md  Sample_Images.txt  requirements.txt  setup.cfg  setup.py  tox.ini
.github/ISSUE_TEMPLATE/: Bug_Report.yml
.github/workflows/: Check_errors.yml  ci_pytest.yml  pypi_release.yml  test-release.yml
Benchmark/: README.md  TEST.txt  distort_images.py  evaluate_benchmarks.py  run_decimer_save_results.py
DECIMER/: DECIMER_EfficinetNetV2_Transfomer_Trainer.py  Efficient_Net_encoder.py  Predictor_usingCheckpoints.py  Repack_model.py  Transformer_decoder.py  __init__.py  config.py  decimer.py  pre_process.py  utils.py
DECIMER/Utils/: Create_TFrecord_From_pickles.py  Create_image_tokenizer.py
DECIMER/automl/efficientnetv2/: __init__.py  autoaugment_test.py  datasets.py  datasets_test.py  effnetv2_configs.py  effnetv2_configs_test.py  effnetv2_model.py  hparams.py  main.py  preprocess_legacy.py  preprocessing.py  preprocessing_test.py  smoke_test.py  utils_test.py
DECIMER/efficientnetv2/: effnetv2_configs.py  effnetv2_model.py  hparams.py  utils.py
DECIMER/repack/: Predictor_EfficientNet2.py
DECIMER_V2/src/: DECIMER_EfficinetNetV2_Transfomer_Trainer.py  Efficient_Net_encoder.py  Predictor_EfficientNet2.py  Predictor_exported.py  Repack_model.py  Transformer_decoder.py  config.py
DECIMER_V2/src/Utils/: Create_TFrecord_From_pickles.py  Create_image_tokenizer.py
DECIMER_V2/src/automl/: __init__.py
DECIMER_V2/src/automl/efficientdet/: coco_metric.py  dataloader.py  dataloader_test.py  det_model_fn.py  efficientdet_arch_test.py  hparams_config.py  inference.py  iou_utils.py  main.py  model_inspect.py  run_tflite.py  test_util.py  utils.py  utils_test.py
DECIMER_V2/src/automl/efficientnetv2/: autoaugment.py  effnetv2_configs.py  (+3 more)
Important_assets/Canonical/: SELFIES_max_length.pkl  SELFIES_tokenizer.pkl
Network/: I2S_Model.py  TPU_Trainer_Image2Smiles.py  helper.py
Network/Transformer/: TPU_Trainer_Image2Smiles_transformer.py
Network/encoder-decoder/: TPU_Trainer_Image2Smiles.py
TFRecord_Utils/: Create_TF_Record.py  Create_TFrecord_From_Vectors.py  Create_tokenizer.py  I2S_Data.py
Tests/: test_functions.py
Transformer/: I2S_Model_Transformer.py  TPU_Trainer_Image2Smiles_transformer.py
Utils/: PubchemFilter.java  RDKit_diversity_picker.py  SMILES2SELFIES.py  SMILEStoCanonicalandAbsoluteSMILES.java  SMILEStoInchi.java  SmilesDepictor.java  TanimotoCalculator.java
docs/: DECIMER.rst  conf.py  index.rst  modules.rst  requirements.txt
docs/source/: conf.py  index.rst  pipeline.rst
src/decimer/: DECIMER.py  DECIMER_V1.0.py  __init__.py  __main__.py  cli.py
src/decimer/Network/: __init__.py  helper.py
src/decimer/assets/: Quotes_database  __init__.py
tests/: test_functions.py
(+29 files in other folders)
