##########################
# Setup.py Configuration #
##########################
# Configuring setup()
[metadata]
name = decimer
version = 1.0.3
description = DECIMER 1.0: Deep Learning for Chemical Image Recognition using Transformers python package
long_description = file: README.md
long_description_content_type = text/markdown

# Links
url = https://github.com/Kohulan/DECIMER-Image_Transformer/pystow
download_url = https://github.com/Kohulan/DECIMER-Image_Transformer/releases
project_urls =
    Bug Tracker = https://github.com/cthoyt/pystow/issues

# Author information
author = Kohulan Rajan
author_email = kohulan.rajan@uni-jena.de
maintainer = Kohulan Rajan
maintainer_email = kohulan.rajan@uni-jena.de

# License information
license = MIT
license_file = LICENSE

[options]
install_requires =
    tensorflow>=2.3
    matplotlib
    pillow
    selfies == 1.0.4
    efficientnet
    pystow

zip_safe = false
include_package_data = True
python_requires = >=3.6

# Where is my code
packages = find:
package_dir =
    = src

[options.packages.find]
where = src

[options.extras_require]
docs =
    sphinx
    sphinx-rtd-theme
    sphinx-click
    sphinx-autodoc-typehints

[options.entry_points]
console_scripts =
    decimer = decimer.cli:main
